--- a/css/styles.css
+++ b/css/styles.css
@@ -1,92 +1,8 @@
-/* MOBILE AND GLOBAL STYLES */
-
-/* applies to screens smaller than 500px (first breakpoint) */
-/* and above unless overwritten below */
-
-body {
-  background: #fcc;
-  margin: 0;
+.value{
+  width: 50%;
+  text-align: center;
 }
 
-header{
-  background-color: #A9A9A9;
-  margin: 0;
-  overflow: auto;
-  justify-content: center;
-}
-
-nav{
-  display: none;
-}
-
-.menu{
-  background-color: purple;
-  line-height: 2em;
-  color: white;
-  width: 10%;
-}
-
-.menu-toggle{
-  display: flex;
-}
-
-/*.menu:hover + nav{
-    display: flex;
-    flex-direction: column;
-}
-
-.menu , nav:hover{
-  display: flex;
-  flex-direction: column;
-}
-
-*/
-
-
-/* TABLET STYLES */
-
-@media screen and (min-width: 500px) {
-  .menu{
-    display: none;
-  }
-
-  /* applies to screens wider than 499px */
-
-
-  nav {
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    background-color: 	#A9A9A9;
-    width: 100%;
-    margin: 0;
-  }
-
-  nav a{
-  transition: 0.75s;
-  padding: 1em;
-  margin: 0;
-  }
-
-  nav a:hover{
-    background-color: #F0F0F0;
-  }
-
-  body {
-    margin: 0;
-    background: #cfc;
-  }
-}
-
-
-
-/* DESKTOP STYLES */
-
-@media screen and (min-width: 1000px) {
-
-  /* applies to screens wider than 999px */
-
-  body {
-    background: #ccf;
-  }
+fieldset{
+  margin-bottom: 0.5em;
 }
